--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 userId=DS45079
 password=Times@12345
 yob=1990
-stocknoteURI=https://api.stocknote.com
-#stocknoteURI=http://localhost:8081
+#stocknoteURI=https://api.stocknote.com
+stocknoteURI=http://localhost:8081
 symbolName=NIFTY50
 symbolNamePrefix=NIFTY
 symbolNameSuffixCall=CE
