--- a/intraday-equities/src/main/resources/application.properties
+++ b/intraday-equities/src/main/resources/application.properties
@@ -1,12 +1,16 @@
+server.port=8080
 userId=DS45079
-password=Nikhil@12345
+pwd=Nikhil@12345
 yob=1990
 amount=10003
+volumeThreshold=100000
+indexName =Nifty 50
 stocknoteURI=https://api.stocknote.com
+#stocknoteURI=http://localhost:8081
 placeOrderEndPoint = /order/placeOrder
 modifyOrderEndPoint = /order/modifyOrder
-#stocknoteURI=http://localhost:8081
-exchange=NFO
+
+exchange=NSE
 transactionType=BUY
 orderType=MKT
 disclosedQuantity=
@@ -18,3 +22,5 @@ logging.config = src/main/resources/log4j.properties
 #logging.config = OptionsTradingApp/log4j.properties # This is for Shashank's laptop
 #lotSize=40
 #server.contextPath=/swagger2-demo
+spring.security.user.name=username
+spring.security.user.password=password
