--- a/intraday-equities/src/main/resources/log4j.properties
+++ b/intraday-equities/src/main/resources/log4j.properties
@@ -8,4 +8,4 @@ log4j.appender.file.File=./log/Logfile.log
 log4j.appender.file.MaxFileSize=10MB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=[%t] %-5p %c %x - %m%n
+log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%t] %-5p %c %x - %m%n
